--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -13,6 +13,8 @@
 
 @plugin "@tailwindcss/typography";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
   --animate-shake: shake 0.6s ease-in-out 0s 1 normal forwards running;
 
