fix(style): specify source

--- a/src/assets/css/vio.css
+++ b/src/assets/css/vio.css
@@ -4,7 +4,7 @@
 /* stylelint-disable import-notation */
 /* stylelint-disable plugin/no-unsupported-browser-features */
 
-@import 'tailwindcss';
+@import 'tailwindcss' source("../../");
 @import './forms.css';
 
 @plugin "@tailwindcss/forms" {
